Fix some style related issues on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -53,7 +53,6 @@ a, a:link, a:visited, a:hover, a:active {
   color: @main-light;
   font-weight: 700;
   cursor: pointer;
-  white-space: nowrap;
 }
 
 
@@ -76,6 +75,11 @@ p {
 
 .justify{
   text-align: justify;
+}
+
+.nowrap {
+  display: inline-block;
+  white-space: nowrap;
 }
 
 .reverse, .reverse-red, .reverse-purple, .reverse-blue {
